// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/propertyValueElement Generic fields should allow cancel 1`] = `
<div>
  <input
    class="Editable octo-propertyvalue"
    placeholder="Empty"
    spellcheck="true"
    style="width: 100%;"
    title=""
    value=""
  />
</div>
`;

exports[`components/propertyValueElement URL fields should allow cancel 1`] = `
<div>
  <div
    class="URLProperty"
  >
    <input
      class="Editable octo-propertyvalue"
      placeholder="Empty"
      style="width: 100%;"
      title=""
      value=""
    />
  </div>
</div>
`;

exports[`components/propertyValueElement should match snapshot, date, array value 1`] = `
<div>
  <div
    class="DateRange empty octo-propertyvalue"
  >
    <button
      class="Button"
      type="button"
    >
      <span>
        Empty
      </span>
    </button>
  </div>
</div>
`;

exports[`components/propertyValueElement should match snapshot, multi-select 1`] = `
<div>
  <div
    class="octo-propertyvalue"
    data-testid="multiselect-non-editable"
    tabindex="0"
  >
    <span
      class="Label propColorBrown "
    >
      value 1
    </span>
    <span
      class="Label propColorBrown "
    >
      value 2
    </span>
  </div>
</div>
`;

exports[`components/propertyValueElement should match snapshot, person, array value 1`] = `
<div>
  <input
    class="Editable octo-propertyvalue"
    placeholder="Empty"
    spellcheck="true"
    style="width: 100%;"
    title=""
    value=""
  />
</div>
`;

exports[`components/propertyValueElement should match snapshot, select 1`] = `
<div>
  <div
    class="octo-propertyvalue"
    data-testid="select-non-editable"
    tabindex="0"
  >
    <span
      class="Label propColorBrown "
    >
      <span
        class="Label-text"
      >
        value 1
      </span>
    </span>
  </div>
</div>
`;

exports[`components/propertyValueElement should match snapshot, select, read-only 1`] = `
<div>
  <div
    class="octo-propertyvalue octo-propertyvalue--readonly"
    data-testid="select-non-editable"
    tabindex="0"
  >
    <span
      class="Label propColorBrown "
    >
      <span
        class="Label-text"
      >
        value 1
      </span>
    </span>
  </div>
</div>
`;

exports[`components/propertyValueElement should match snapshot, url, array value 1`] = `
<div>
  <div
    class="URLProperty octo-propertyvalue"
  >
    <a
      class="link"
      href="http://localhost"
      rel="noreferrer"
      target="_blank"
    >
      http://localhost
    </a>
    <button
      aria-label="Edit"
      class="IconButton Button_Edit"
      title="Edit"
      type="button"
    >
      <i
        class="CompassIcon icon-pencil-outline EditIcon"
      />
    </button>
    <button
      aria-label="Copy"
      class="IconButton Button_Copy"
      title="Copy"
      type="button"
    >
      <i
        class="CompassIcon icon-content-copy content-copy"
      />
    </button>
  </div>
</div>
`;
